--- a/app/static/css/components/tables.css
+++ b/app/static/css/components/tables.css
@@ -1,31 +1,34 @@
 /* --- Tables --- */
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    table-layout: auto;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+  table-layout: auto;
 }
 
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-    word-wrap: break-word;
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+  word-wrap: break-word;
 }
 
 th {
-    background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 /* --- Column Sorting --- */
 th.sortable {
   cursor: pointer;
   position: relative;
-  user-select: none; /* Prevent text selection when clicking */
+  user-select: none;
+  /* Prevent text selection when clicking */
 }
 
 th.sortable::after {
-  content: "\f0dc"; /* FontAwesome sort icon */
+  content: "\f0dc";
+  /* FontAwesome sort icon */
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   position: absolute;
@@ -44,33 +47,35 @@ th.sortable:hover::after {
 
 /* Style for active sort direction */
 th.sortable[data-sort-dir="asc"]::after {
-  content: "\f0de"; /* FontAwesome sort-up icon */
+  content: "\f0de";
+  /* FontAwesome sort-up icon */
   opacity: 1;
   color: #004165;
 }
 
 th.sortable[data-sort-dir="desc"]::after {
-  content: "\f0dd"; /* FontAwesome sort-down icon */
+  content: "\f0dd";
+  /* FontAwesome sort-down icon */
   opacity: 1;
   color: #004165;
 }
 
 .action-links {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
-.action-links > .btn-primary,
-.action-links > .btn-danger {
-    flex-grow: 1;
+.action-links>.btn-primary,
+.action-links>.btn-danger {
+  flex-grow: 1;
 }
 
 .actions-column {
-    text-align: right;
+  text-align: right;
 }
 
 .inactive-user {
-    color: #999;
-    background-color: #f9f9f9;
+  color: #999;
+  background-color: #f9f9f9;
 }
